--- a/assets/partials/_menu.scss
+++ b/assets/partials/_menu.scss
@@ -2,7 +2,7 @@
 ** Menu
 */
 /* Accessibility toggles */
-.accessibility-menu {
+.a11y-menu {
 	display: block;
 	float: right;
 	padding-right: 1rem;
