--- a/assets/sitespecific/marketplace.scss
+++ b/assets/sitespecific/marketplace.scss
@@ -1,6 +1,7 @@
 ---
 style: compressed
 ---
+
 /*
 ** Marketplace
 */
@@ -57,6 +58,16 @@ style: compressed
 		width: 20rem;
 		will-change: transform;
 
+		&:hover .header {
+			animation: marketplace-marquee 5s linear infinite;
+			text-overflow: initial;
+		}
+
+		&:active .header {
+			animation: initial;
+			text-overflow: ellipsis;
+		}
+
 		&:active {
 			filter: initial;
 			transform: scale3d(.9, .9, .9) !important;
@@ -67,7 +78,6 @@ style: compressed
 			bottom: 1em;
 			left: 1.75em;
 			line-height: 1.1em;
-			max-height: 4.5em;
 			max-width: 15.9rem;
 			overflow: hidden;
 			position: relative;
@@ -75,14 +85,24 @@ style: compressed
 			word-wrap: break-word;
 		}
 
+		.desc {
+			-ms-overflow-style: -ms-autohiding-scrollbar; // sass-lint:disable-line no-vendor-prefixes
+			height: 4.5em;
+			&:hover { overflow-y: scroll;   }
+		}
+
+		.byline { height: 1em; }
+
 		.header {
 			color: black;
 			height: 1.1em;
 			left: .5em;
 			overflow: hidden;
 			position: relative;
+			text-overflow: ellipsis;
 			top: .25em;
 			transform: translateZ(10px);
+			white-space: nowrap;
 			width: 8.5em;
 		}
 
